New updated Login and signup Pages

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
-# ADD backend url here 
-BACKEND_URL = "https://backend.kunwar1234singh1234.workers.dev/"
+PORT= 
+SECRET_KEY =dummy
+DATABASE_URL=dummy
+
+
